* Fri Mar 17 2017 Clayton Mentzer, Liz Nemsick 6.0.0-1
- Updated README
- Update puppet version in .travis.yaml

* Thu Feb 09 2017 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.0.0-0
- Changed type of debug level to be consistent for all modules.

* Mon Jan 23 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
- Migrated to using puppetlabs-concat
- Added support for Active Directory Domains

* Thu Jan 12 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Updated to use new pki scheme.
- Application certs now managed in /etc/pki/simp_apps/sssd/x509
- Strongly typed

* Mon Dec 19 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 6.0.0-0
- Update Global Catalysts

* Wed Nov 23 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 5.0.0-0
- Fix dependancies for simp 6 bump

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.0-0
- Updated to compliance_markup version 2

* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0
- Updated to use the version of 'simpcat' that does not conflict with
  'puppetlabs/concat'.

* Mon Aug 01 2016 Nicholas Hughes <nicholasmhughes@gmail.com> - 4.1.3-0
- Fixed incorrect variable references in ldap.erb.

* Sat Mar 19 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.2-0
- Migrated use_simp_pki to a global catalyst.

* Mon Mar 14 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.1-0
- Moved to Semantic Versioning 2.0
- Fixed a bug in the LDAP provider where we had
  `ldap_chpass_updates_last_change` as well as
  `ldap_chpass_update_last_change`. These were consolidated into a correct
  single `ldap_chpass_update_last_change` Boolean.
- Removed RPM dependencies on 'simp-boostrap' and 'puppet' since these are
  technically not necessary for just installing the module.

* Tue Mar 01 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 4.1.0-9
- Added compliance function support

* Thu Dec 24 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-8